# routes/api.php
@@ -20,3 +20,5 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 });
 
 Route::post('signup', [UserController::class, 'signup']);
+
+Route::post('verifyOTP', [UserController::class, 'verifyOTP']);
